# wikibench

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  spec.md  wikibench-start-prompt.md
episodes/: dev.jsonl  dev_hub_filtered.jsonl  test.jsonl  test_hub_filtered.jsonl
scripts/: build_db.py  build_graph.py  build_text_cache.py  download_data.sh  download_dumps.py  evaluate.py  quick_sample.py  run_mcp_server.py  run_pipeline.sh  sample_episodes.py
tests/: test_integration.py  test_sql_parser.py
wikipedia_bench/: __init__.py  article_reader.py  db.py  graph.py  mcp_server.py  redirects.py  sampler.py  schemas.py  scorer.py  sql_parser.py  text_extract.py  wikitext.py
